--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     {{ 'Reference'|manual_link|safe }}
-    {% if 'editor'|is_authorized %}
+    {% if 'contributor'|is_authorized %}
         <div class="button-bar">
             <a href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
             <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
