--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     {{ 'Event'|manual_link|safe }}
-    {% if 'editor'|is_authorized %}
+    {% if 'contributor'|is_authorized %}
         <div class="button-bar">
             {% for code in config['CLASS_CODES']['event'] %}
                 <a href="{{ url_for('event_insert', code=code) }}">+ {{ code|get_class_name }}</a>
