--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -20,7 +20,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
-            {% if 'editor'|is_authorized %}
+            {% if 'contributor'|is_authorized %}
                 <a href="{{ url_for('file_update', id_=entity.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ entity|display_delete_link|safe }}
             {% endif %}
@@ -50,7 +50,7 @@
         {{ entity|description|safe }}
     </div>
     <div id="tab-source">
-        {% if 'editor'|is_authorized %}
+        {% if 'contributor'|is_authorized %}
             <div class="button-bar">
                 <a href="{{ url_for('file_add2', id_=entity.id, class_name='source')}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('source_insert', origin_id=entity.id) }}">+ {{ _('source')|uc_first }}</a>
@@ -61,7 +61,7 @@
     {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find'] %}
         {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
             <div id="tab-{{name}}">
-                {% if 'editor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
+                {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
                     <div class="button-bar">
                         <a href="{{ url_for('file_add2', id_=entity.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                         {% if name == 'place' %}
@@ -78,7 +78,7 @@
         {% endif %}
     {% endfor %}
     <div id="tab-reference">
-        {% if 'editor'|is_authorized %}
+        {% if 'contributor'|is_authorized %}
             <div class="button-bar">
                 <a href="{{ url_for('reference_add', origin_id=entity.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=entity.id) }}">+ {{ _('bibliography')|uc_first }}</a>
