--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     {{ 'Source'|manual_link|safe }}
-    {% if 'editor'|is_authorized %}
+    {% if 'contributor'|is_authorized %}
         <div class="button-bar">
             <a href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
         </div>
