--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -53,7 +53,8 @@
 <script src="/static/vendor/fontawesome-5.8.1/js/all.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/fullscreen/Leaflet.fullscreen.min.js"></script>
-<script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.min.js"></script>
+<!--using modified version of leaflet-geonames for result list hack -->
+<script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.js"></script>
 
