Option for notes in profile

--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -19,7 +19,7 @@
         {{ data['display']|data_table|safe }}
     </div>
     <div style="float:left;margin-left:2em;">
-        <h1>{{ _('map')|uc_first }}</h1>
-        {{ data['map']|data_table|safe }}
+        <h1>{{ _('modules')|uc_first }}</h1>
+        {{ data['modules']|data_table|safe }}
     </div>
 {% endblock %}
