geonames buttons dependent on module setting

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -1,4 +1,5 @@
 <script>
+    var geoNamesModule = '{{ current_user.settings['module_geonames'] }}';
     var geoNamesUsername = '{{ config['GEONAMES_USERNAME'] }}';
     var thunderforestKey = '{{ config['THUNDERFOREST_KEY'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
