--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -34,6 +34,7 @@
             {{ profile_image_id|display_profile_image|safe }}
             <div style="float:left;">
                 {{ tables['info']|data_table|safe }}
+                {{ reference|note|safe }}
                 {{ reference|description|safe }}
             </div>
             <div style="clear:both;"></div>
