--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -33,6 +33,7 @@
             <div style="float:left;">
                 {{ tables['info']|data_table|safe }}
                 {{ source|display_external_references|safe }}
+                {{ source|note|safe }}
                 {{ source|description|safe }}
             </div>
             <div style="clear:both;"></div>
