--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        {% if 'contributer'|is_authorized %}
+        {% if 'contributor'|is_authorized %}
             <div style="float:left;">
                 <h1>{{ _('modules')|uc_first }}</h1>
                 <div class="data-table">
