Minor layout fix

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -4,9 +4,11 @@
 {% endblock %}
 {% block content %}
     {% if current_user.is_authenticated %}
-        <div style="float:left;margin-right:2em;">
-            {{ tables['overview'].display('overview')|safe }}
-        </div>
+        {% if tables['overview']['rows'] %}
+            <div style="float:left;margin-right:2em;">
+                {{ tables['overview'].display('overview')|safe }}
+            </div>
+        {% endif %}
         <div style="float:left;">
             <p>
                 {{ _('feedback teaser') }} <a href="{{ url_for('index_feedback') }}">{{ _('feedback')|uc_first }}</a>.
