--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -16,12 +16,11 @@
         <link rel="stylesheet" href="/static/css/style.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/css/color.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/css/images.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/vendor/jquery/DataTables-1.10.18/datatables.css" />
+        <link rel="stylesheet" href="/static/css/table.css?v={{ config['VERSION'] }}" />
         <script src="/static/vendor/jquery/jquery-3.3.1.min.js"></script>
         <script src="/static/vendor/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
-        <script src="/static/vendor/jquery/tablesorter-2.31.0/js/jquery.tablesorter.min.js"></script>
-        <script src="/static/vendor/jquery/tablesorter-2.31.0/js/jquery.tablesorter.widgets.min.js"></script>
-        <script src="/static/vendor/jquery/tablesorter-2.31.0/js/extras/jquery.tablesorter.pager.min.js"></script>
-        <script src="/static/vendor/jquery/tablesorter-2.31.0/js/parsers/parser-input-select.min.js"></script>
+        <script src="/static/vendor/jquery/DataTables-1.10.18/datatables.min.js"></script>
         <script src="/static/vendor/jquery/jquery-validation-1.15.0/jquery.validate.min.js"></script>
         <script src="/static/vendor/jquery/jstree-3.3.7/jstree.min.js"></script>
         <script src="/static/vendor/jquery/jstree-3.3.7/jstree.search.js"></script>
