--- a/openatlas/static/css/table.css
+++ b/openatlas/static/css/table.css
@@ -3,9 +3,11 @@ table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
     background-color: #adadad;
 }
 
-table.dataTable th {
+.tabs-container table.dataTable th, table.dataTable th {
     color: #ffffff;
     background-color: #000000;
+    font-weight: bold;
+    border-right: 1px solid #ddd;
 }
 
 table.dataTable.no-footer {
@@ -29,10 +31,14 @@ table.dataTable {
     width: auto;
 }
 
-.dataTables_paginate .ui-widget-header, .ui-widget-header .ui-state-default {
+.dataTables_paginate .ui-widget-header .ui-state-default {
     background-color: inherit;
 }
 
 .dataTables_wrapper .ui-toolbar {
     padding: 0;
+}
+
+.DataTables_sort_icon {
+    display: none;
 }
