--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -62,6 +62,10 @@
                         <div class="table-cell">{{ form.module_geonames }}</div>
                     </div>
                     <div class="table-row">
+                        <div>{{ form.module_map_overlay.label|safe }}  {{ form.module_map_overlay.description|display_tooltip|safe }}</div>
+                        <div class="table-cell">{{ form.module_map_overlay }}</div>
+                    </div>
+                    <div class="table-row">
                         <div>{{ form.module_notes.label|safe }}  {{ form.module_notes.description|display_tooltip|safe }}</div>
                         <div class="table-cell">{{ form.module_notes }}</div>
                     </div>
