--- a/openatlas/templates/admin/general_update.html
+++ b/openatlas/templates/admin/general_update.html
@@ -5,6 +5,7 @@
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ 'General'|manual_link|safe }}
     {{ form|display_form|safe }}
     {% for field, errors in form.errors.items() %}
         {{ form[field].label }}: {{ ', '.join(errors) }}
