Overlay maps: update

--- a/openatlas/templates/overlay/insert.html
+++ b/openatlas/templates/overlay/insert.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
     > {{ place|link|safe }}
-    > {{ file|link|safe }}
+    > {{ image|link|safe }}
     > + {{ _('overlay')|uc_first }}
 {% endblock %}
 {% block content %}
