Overlay maps: update overlay for place

--- a/openatlas/templates/overlay/update.html
+++ b/openatlas/templates/overlay/update.html
@@ -11,5 +11,25 @@
             {{ _('remove')|uc_first }}
         </a>
     </div>
-    {{ form|display_form()|safe }}
+    <form method="post">
+        {{ form.csrf_token }}
+        <div class="data-table">
+            <div class="table-row">
+                <div></div>
+                <div class="table-cell">{{ _('easting')|uc_first }}</div>
+                <div class="table-cell">{{ _('northing')|uc_first }}</div>
+            </div>
+            <div class="table-row">
+                <div>{{ _('top left')|uc_first }}</div>
+                <div class="table-cell">{{ form.top_left_easting }}</div>
+                <div class="table-cell">{{ form.top_left_northing }}</div>
+            </div>
+            <div class="table-row">
+                <div>{{ _('bottom right')|uc_first }}</div>
+                <div class="table-cell">{{ form.bottom_right_easting }}</div>
+                <div class="table-cell">{{ form.bottom_right_northing }}</div>
+            </div>
+        </div>
+        {{ form.save }}
+    </form>
 {% endblock %}
