Minor layout changes

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -250,6 +250,7 @@ input.table-select {
     display: inline-block;
     margin-right: 1em;
     padding: 0.3em 0.5em;
+    padding-top: 0.4em;
 }
 
 noscript div {
