--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -11,6 +11,9 @@
         {% if tables['subs'].rows %}
             <li><a href="#tab-subs">{{ _('sub events')|uc_first }} {{ tables['subs']|format_tab_number|safe }}</a></li>
         {% endif %}
+        {% if gis_data %}
+            <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
+        {% endif %}
         <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
         <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
@@ -40,6 +43,18 @@
         <div id="tab-subs">
             {{ tables['subs'].display('subs')|safe }}
         </div>
+    {% endif %}
+    {% if gis_data %}
+        <div id="tab-map">
+            <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
+        </div>
+        <script src="/static/js/map/map.js"></script>
+        <script>
+            /* workaround for leaflet bug when map not in the first tab */
+            $("body").on('click','#map-tab-id', function() {
+                map.panBy(new L.Point(0, -1));
+            });
+        </script>
     {% endif %}
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
