Added Saranya to credits

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -89,6 +89,7 @@
     Peter Andorfer<br/>
     Petra Heinicker<br/>
     Sandra Lehecka<br/>
+    Saranya Balasubramanian<br/>
     Veronika Gründhammer<br/>
 </p>
 {% endblock %}
