Moving information carrier out of references

--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -6,7 +6,7 @@
     {{ 'Object'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
         <div class="button-bar">
-            <a href="{{ url_for('object_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
+            <a href="{{ url_for('object_insert') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
     {{ table.display()|safe }}
