--- a/openatlas/templates/object/update.html
+++ b/openatlas/templates/object/update.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     <a href="{{ url_for('object_index') }}">{{ _('object')|uc_first }}</a>
-    > + {{ 'E84'|get_class_name }}
+    > {{ object_|link|safe }}
+    > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|display_form()|safe }}
