--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -8,9 +8,8 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        {% if tables['event'].rows %}
-            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
-        {% endif %}
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -30,10 +29,22 @@
             <div style="clear:both;"></div>
         </div>
     </div>
-    {% if tables['event'].rows %}
-        <div id="tab-event">
-            {{ tables['event'].display('source')|safe }}
-        </div>
-    {% endif %}
+    <div id="tab-source">
+        {% if 'contributor'|is_authorized %}
+            <div class="button-bar">
+                <a href="{{ url_for('source_add', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['source'].display('source')|safe }}
+    </div>
+    <div id="tab-event">
+        {% if 'contributor'|is_authorized %}
+            <div class="button-bar">
+                <a href="{{ url_for('event_insert', code='E9', origin_id=object_.id) }}">+ {{ 'E9'|get_class_name }}</a>
+            </div>
+        {% endif %}
+        {{ tables['event'].display('event')|safe }}
+    </div>
 </div>
 {% endblock %}
