--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -68,7 +68,7 @@
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('source_add', origin_id=object_.id) }}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('place_add_source', id_=object_.id) }}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
             </div>
         {% endif %}
@@ -87,7 +87,7 @@
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('reference_add', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
@@ -98,7 +98,7 @@
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('file_add', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
             </div>
         {% endif %}
