--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -43,7 +43,7 @@
             <div id="tab-{{name}}">
                 {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
                     <div class="button-bar">
-                        <a href="{{ url_for('reference_add2', reference_id=reference.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                        <a href="{{ url_for('reference_add', id_=reference.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                         {% if name == 'place' %}
                             <a href="{{ url_for('place_insert', origin_id=reference.id) }}">+ {{ _('place')|uc_first }}</a>
                         {% elif name == 'source' %}
