--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -44,7 +44,7 @@
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('source_add', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('actor_add_source', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('source_insert', origin_id=actor.id) }}">+ {{ _('source')|uc_first }}</a>
             </div>
         {% endif %}
@@ -93,7 +93,7 @@
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('reference_add', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('actor_add_reference', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=actor.id) }}">+ {{ _('bibliography')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='edition', origin_id=actor.id) }}">+ {{ _('edition')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='external_reference', origin_id=actor.id) }}">+ {{ _('external reference')|uc_first }}</a>
@@ -104,7 +104,7 @@
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
             <div class="button-bar">
-                <a href="{{ url_for('file_add', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('actor_add_file', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('file_insert', origin_id=actor.id) }}">+ {{ _('file')|uc_first }}</a>
             </div>
         {% endif %}
