--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
-    > {{ origin|link|safe }}
-    > {{ _('add')|uc_first }} {{ _('reference')|uc_first }}
+    <a href="{{ url_for('reference_index') }}">{{ _('reference' )|uc_first }}</a>
+    > {{ reference|link|safe }}
+    > {{ _('add')|uc_first }} {{ _(class_name)|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
